--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,7 +1,8 @@
 #  The contact options.
-
 - type: github
   icon: "fab fa-github"
+  noblank: true
+
 
 
 - type: email
@@ -26,11 +27,7 @@
 #
 - type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/joshua-porter-abc/'                  # Fill with your Linkedin homepage
-
- - type: linkedin
-  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/joshua-porter-abc/'                  # Fill with your Linkedin homepage
+  url:  'https://www.linkedin.com/in/joshua-porter-abc/'            # Fill with your Linkedin homepage
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
