Created Blog Post and Implemented Mondrian HTML and JS

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/151868227?v=4
+avatar: /assets/Josh/JoshCyberPunk.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
