--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ avatar: /assets/Josh/JoshCyberPunk.png
 toc: true
 
 comments:
-  active: 'giscus' 
+  active: #'giscus' 
   # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   #disqus:
@@ -91,15 +91,14 @@ comments:
     #repo: # <gh-username>/<repo>
     #issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
-  giscus:
-    repo: <JoshuaPorter0>/<JoshuaPorter0.github.io>
-    repo_id: "R_kgDOK66p9Q"
-    category: "General"
-    category_id: "DIC_kwDOK66p9c4Cb0n4"
-    mapping: pathname # optional, default to 'pathname'
-    input_position: bottom # optional, default to 'bottom'
-    lang: site.lang # optional, default to the value of `site.lang`
-    reactions_enabled: 1 # optional, default to the value of `1`
+  # repo: <JoshuaPorter0>/<JoshuaPorter0.github.io>
+   # repo_id: "R_kgDOK66p9Q"
+   # category: "General"
+   # category_id: "DIC_kwDOK66p9c4Cb0n4"
+   # mapping: pathname # optional, default to 'pathname'
+    #input_position: bottom # optional, default to 'bottom'
+   #lang: site.lang # optional, default to the value of `site.lang`
+   #  reactions_enabled: 1 # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -141,7 +140,7 @@ defaults:
       type: posts
     values:
       layout: post
-      comments: true # Enable comments in posts.
+      comments: false # Enable comments in posts.
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
